recheck all page

--- a/index-2.html
+++ b/index-2.html
@@ -346,7 +346,7 @@
     <!-- Video area Start -->
     <div class="video-popup-area style-1 py-140">
       <div class="container">
-        <div class="shape">
+        <div class="outer-shape">
           <img src="images/shape/tree.png" alt="video-card" />
         </div>
         <div class="row">
@@ -422,7 +422,7 @@
     <!-- Video area End -->
 
     <!-- Room and suites Start -->
-    <div class="room_and_suites style-2 pt-100 pb-156">
+    <div class="room_and_suites style-2 py-140">
       <div class="bg-image">
         <img
           src="images/section-bg/room_and_suits-1.jpg"
@@ -619,7 +619,7 @@
     <!-- Room and suites End -->
 
     <!-- Hotel Facilities Start -->
-    <div class="service-area style-2 py-100">
+    <div class="service-area style-2 py-140">
       <div class="shape">
         <img src="images/shape/leaf.png" alt="shape" />
       </div>
@@ -720,7 +720,7 @@
 
     <!--- Price Area Start !-->
     <div
-      class="price-area style-1 background-gray pt-100 pb-156"
+      class="price-area style-1 background-gray pt-140 pb-156"
       style="background-image: url(images/section-bg/price-area.jpg)">
       <div class="container">
         <div class="section-title style-3 mb-0">
@@ -903,7 +903,7 @@
     <!-- Checknow form end -->
 
     <!-- About Us Area Start !-->
-    <div class="about-us-area style-3 pb-120 pt-55">
+    <div class="about-us-area style-3 pb-134 pt-45">
       <div class="bg-image">
         <img src="images/section-bg/about-us-2.png" alt="" />
       </div>
@@ -1006,7 +1006,7 @@
     <!-- About Us Area End !-->
 
     <!-- Testimonial area style-2 Start -->
-    <div class="testimonial-slider-area style-2 py-140">
+    <div class="testimonial-slider-area style-2 pt-140 pb-120">
       <div class="bg-image">
         <img src="images/section-bg/testimonial-two.png" alt="" />
       </div>
@@ -1017,98 +1017,119 @@
             <h2 class="title text-white">Words Of Our Clients</h2>
           </div>
         </div>
-        <div class="card-wrapper">
-          <div class="row gy-4">
-            <div class="col-md-6 col-lg-4">
-              <!-- single testimonial-card start-2 -->
-              <div class="testimonial-card style-2">
-                <div class="quote">
-                  <img src="images/icon/quote.svg" alt="quote" />
+        <div class="testimonial-slider-wrapper">
+          <!-- single testimonial-card start-2 -->
+          <div class="testimonial-card style-2">
+            <div class="quote">
+              <img src="images/icon/quote.svg" alt="quote" />
+            </div>
+            <div class="content-wrapper">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <p class="desc">
+                I love everything that put together for my living room! I just
+                bought this house and only had a few items I wanted to keep.
+                I’am able to help me visualize the room”
+              </p>
+              <div class="meta-user">
+                <div class="image">
+                  <img src="images/user/img.png" alt="user" />
                 </div>
-                <div class="content-wrapper">
-                  <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                  </div>
-                  <p class="desc">
-                    I love everything that put together for my living room! I
-                    just bought this house and only had a few items I wanted to
-                    keep. I’am able to help me visualize the room”
-                  </p>
-                  <div class="meta-user">
-                    <div class="image">
-                      <img src="images/user/img.png" alt="user" />
-                    </div>
-                    <div class="content">
-                      <div class="title">Jane Cooper, USA</div>
-                      <p class="desc">Co-manager associated</p>
-                    </div>
-                  </div>
+                <div class="content">
+                  <div class="title">Jane Cooper, USA</div>
+                  <p class="desc">Co-manager associated</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <!-- single testimonial-card start-2 -->
-              <div class="testimonial-card style-2">
-                <div class="quote">
-                  <img src="images/icon/quote.svg" alt="quote" />
+          </div>
+          <!-- single testimonial-card start-2 -->
+          <div class="testimonial-card style-2">
+            <div class="quote">
+              <img src="images/icon/quote.svg" alt="quote" />
+            </div>
+            <div class="content-wrapper">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <p class="desc">
+                I love everything that put together for my living room! I just
+                bought this house and only had a few items I wanted to keep.
+                I’am able to help me visualize the room”
+              </p>
+              <div class="meta-user">
+                <div class="image">
+                  <img src="images/user/img-2.png" alt="user" />
                 </div>
-                <div class="content-wrapper">
-                  <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                  </div>
-                  <p class="desc">
-                    I love everything that put together for my living room! I
-                    just bought this house and only had a few items I wanted to
-                    keep. I’am able to help me visualize the room”
-                  </p>
-                  <div class="meta-user">
-                    <div class="image">
-                      <img src="images/user/img-2.png" alt="user" />
-                    </div>
-                    <div class="content">
-                      <div class="title">Jane Cooper, USA</div>
-                      <p class="desc">Co-manager associated</p>
-                    </div>
-                  </div>
+                <div class="content">
+                  <div class="title">Jane Cooper, USA</div>
+                  <p class="desc">Co-manager associated</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <!-- single testimonial-card start-2 -->
-              <div class="testimonial-card style-2">
-                <div class="quote">
-                  <img src="images/icon/quote.svg" alt="quote" />
+          </div>
+          <!-- single testimonial-card start-2 -->
+          <div class="testimonial-card style-2">
+            <div class="quote">
+              <img src="images/icon/quote.svg" alt="quote" />
+            </div>
+            <div class="content-wrapper">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <p class="desc">
+                I love everything that put together for my living room! I just
+                bought this house and only had a few items I wanted to keep.
+                I’am able to help me visualize the room”
+              </p>
+              <div class="meta-user">
+                <div class="image">
+                  <img src="images/user/img-3.png" alt="user" />
                 </div>
-                <div class="content-wrapper">
-                  <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                  </div>
-                  <p class="desc">
-                    I love everything that put together for my living room! I
-                    just bought this house and only had a few items I wanted to
-                    keep. I’am able to help me visualize the room”
-                  </p>
-                  <div class="meta-user">
-                    <div class="image">
-                      <img src="images/user/img-3.png" alt="user" />
-                    </div>
-                    <div class="content">
-                      <div class="title">Jane Cooper, USA</div>
-                      <p class="desc">Co-manager associated</p>
-                    </div>
-                  </div>
+                <div class="content">
+                  <div class="title">Jane Cooper, USA</div>
+                  <p class="desc">Co-manager associated</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- single testimonial-card start-2 -->
+          <div class="testimonial-card style-2">
+            <div class="quote">
+              <img src="images/icon/quote.svg" alt="quote" />
+            </div>
+            <div class="content-wrapper">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <p class="desc">
+                I love everything that put together for my living room! I just
+                bought this house and only had a few items I wanted to keep.
+                I’am able to help me visualize the room”
+              </p>
+              <div class="meta-user">
+                <div class="image">
+                  <img src="images/user/img-3.png" alt="user" />
+                </div>
+                <div class="content">
+                  <div class="title">Jane Cooper, USA</div>
+                  <p class="desc">Co-manager associated</p>
                 </div>
               </div>
             </div>
@@ -1134,6 +1155,9 @@
           </div>
           <div class="client-logo">
             <img src="images/brand-logo/img-4.png" alt="logo" />
+          </div>
+          <div class="client-logo">
+            <img src="images/brand-logo/img-5.png" alt="logo" />
           </div>
           <div class="client-logo">
             <img src="images/brand-logo/img-5.png" alt="logo" />
@@ -1352,10 +1376,10 @@
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
-                    <h3 class="footer-widget-title pb-12">Location</h3>
-                    <div class="contact mt-20">
+                    <h3 class="footer-widget-title pb-12 mb-20">Location</h3>
+                    <div class="contact mt-26">
                       <i class="fa-solid fa-location-dot"></i>
-                      <span>6391 Elgin St. Celina, 10299</span>
+                      <span>2972 Westheimer Rd. Santa Ana, Illinois 85486</span>
                     </div>
                     <div class="mt-30">
                       <a href="#" class="theme-btn style-3">
@@ -1381,7 +1405,7 @@
                 </p>
               </div>
               <div class="mb-12">
-                <h3 class="footer-widget-title pb-12">Location</h3>
+                <h3 class="footer-widget-title pb-12">@Instagram</h3>
               </div>
               <div class="footer-widget widget-instagram-feed mt-30">
                 <div class="single-instagram-feed">
