--- a/team-details.html
+++ b/team-details.html
@@ -294,6 +294,9 @@
     </div>
     <!-- Page Header End !-->
     <div class="team-details-area py-140">
+      <div class="outer-shape">
+        <img src="images/shape/leaf.png" alt="shape" />
+      </div>
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-xl-5 col-lg-6">
