--- a/blog-details.html
+++ b/blog-details.html
@@ -299,7 +299,7 @@
     </div>
     <!-- Page Header End !-->
 
-    <div class="blog-area">
+    <div class="blog-area py-140">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 blog-details-wrapper">
