add: home-1 responsive

--- a/index.html
+++ b/index.html
@@ -941,9 +941,9 @@
     </div>
     <!-- Feature and facilities End -->
     <!-- Testimonial area styel-1 start -->
-    <div class="testimonial-area">
+    <div class="testimonial-area pt-140">
       <div class="container">
-        <div class="banner-text">
+        <div class="banner-text mb-40">
           <p>Testimonial</p>
         </div>
         <div class="testimonial-slider">
