add: home one sm responsive

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
     <!-- Hotel Facilities Start -->
     <div
-      class="service-area style-1 py-100"
+      class="service-area style-1 py-140"
       style="background-image: url(images/section-bg/service-area.jpg)">
       <div class="container">
         <div class="section-title mb-0 style-2">
@@ -943,7 +943,7 @@
     <!-- Testimonial area styel-1 start -->
     <div class="testimonial-area pt-140">
       <div class="container">
-        <div class="banner-text mb-40">
+        <div class="banner-text">
           <p>Testimonial</p>
         </div>
         <div class="testimonial-slider">
@@ -1400,11 +1400,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-2 col-lg-6">
+            <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="footer-widget widget_nav_menu">
                 <h2 class="footer-widget-title">Get Free Link</h2>
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-md-6">
                     <ul>
                       <li><a href="about.html">About Us</a></li>
                       <li><a href="#">Portfolio</a></li>
@@ -1412,7 +1412,7 @@
                       <li><a href="#">Services</a></li>
                     </ul>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-md-6">
                     <ul>
                       <li><a href="#">Facilities</a></li>
                       <li><a href="#">Testimonial</a></li>
@@ -1422,7 +1422,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-lg-3">
               <div class="footer-widget">
                 <h2 class="footer-widget-title">Contact</h2>
                 <div class="footer-widget-info">
