--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
-    />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -18,50 +17,41 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png"
-    />
+      href="images/logo/apple-touch-icon-57x57.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png"
-    />
+      href="images/logo/apple-touch-icon-72x72.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png"
-    />
+      href="images/logo/apple-touch-icon-76x76.png" />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png"
-    />
+      href="images/logo/apple-touch-icon-114x114.png" />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png"
-    />
+      href="images/logo/apple-touch-icon-120x120.png" />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png"
-    />
+      href="images/logo/apple-touch-icon-144x144.png" />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png"
-    />
+      href="images/logo/apple-touch-icon-152x152.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png"
-    />
+      href="images/logo/apple-touch-icon-180x180.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -82,8 +72,7 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"
-      ></div>
+        style="background-image: url('images/icon/preeloader.gif')"></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -243,20 +232,22 @@
             <div class="menu-sidebar-single-widget">
               <h5 class="menu-sidebar-title">Contact Info</h5>
               <div class="header-contact-info">
-                <span
-                  ><i class="fa-solid fa-location-dot"></i>20, Bordeshi, New
-                  York, US</span
-                >
-                <span
-                  ><a href="mailto:hello@technova.com"
-                    ><i class="fa-regular fa-envelope"></i>hello@technova.com</a
-                  >
+                <span>
+                  <i class="fa-solid fa-location-dot"></i>
+                  20, Bordeshi, New York, US
                 </span>
-                <span
-                  ><a href="tel:+123-456-7890"
-                    ><i class="fa-solid fa-phone"></i>+123-456-7890</a
-                  ></span
-                >
+                <span>
+                  <a href="mailto:hello@technova.com">
+                    <i class="fa-regular fa-envelope"></i>
+                    hello@technova.com
+                  </a>
+                </span>
+                <span>
+                  <a href="tel:+123-456-7890">
+                    <i class="fa-solid fa-phone"></i>
+                    +123-456-7890
+                  </a>
+                </span>
               </div>
               <div class="social-profile">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -283,8 +274,7 @@
                 style="border: 0; width: 1645px; height: 707px"
                 allowfullscreen=""
                 loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Map widget End !-->
           </div>
@@ -328,8 +318,7 @@
                           <input
                             name="author"
                             type="text"
-                            placeholder="Name *"
-                          />
+                            placeholder="Name *" />
                         </div>
                       </div>
                       <div class="col-xl-6">
@@ -337,8 +326,7 @@
                           <input
                             name="email"
                             type="text"
-                            placeholder="Email *"
-                          />
+                            placeholder="Email *" />
                         </div>
                       </div>
                       <div class="col-xl-12">
@@ -346,8 +334,7 @@
                           <input
                             name="website"
                             type="text"
-                            placeholder="Website"
-                          />
+                            placeholder="Website" />
                         </div>
                       </div>
                       <div class="col-xl-12">
@@ -356,8 +343,7 @@
                             name="comment"
                             cols="20"
                             rows="3"
-                            placeholder="Comment"
-                          ></textarea>
+                            placeholder="Comment"></textarea>
                         </div>
                       </div>
                       <div class="col-12">
@@ -379,8 +365,7 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')"
-    >
+      style="background-image: url('images/section-bg/footer-1.png')">
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -395,8 +380,7 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo"
-                      />
+                        alt="Footer Logo" />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -436,56 +420,46 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
               </div>
             </div>
@@ -496,18 +470,18 @@
         <div class="container">
           <div class="footer-bottom-wrapper">
             <div class="copyright-text">
-              <p>© Copyright 2024 by kodesolution.com</p>
+              <p>© Copyright 2024 by hotex.com</p>
             </div>
             <div class="footer-bottom-menu">
               <ul>
                 <li>
-                  <a href="#">Facebook</a>
+                  <a href="#">Terms &amp; Condition</a>
                 </li>
                 <li>
-                  <a href="#">Instagram</a>
+                  <a href="#">Privacy Policy</a>
                 </li>
                 <li>
-                  <a href="#">Youtube</a>
+                  <a href="#">Legal</a>
                 </li>
               </ul>
             </div>
@@ -532,8 +506,7 @@
                 class="theme-btn"
                 type="submit"
                 title="Search"
-                aria-label="Search"
-              >
+                aria-label="Search">
                 Search
               </button>
             </div>
