--- a/index-2.html
+++ b/index-2.html
@@ -1462,18 +1462,18 @@
         <div class="container">
           <div class="footer-bottom-wrapper">
             <div class="copyright-text">
-              <p>© Copyright 2024 by kodesolution.com</p>
+              <p>© Copyright 2024 by hotex.com</p>
             </div>
             <div class="footer-bottom-menu">
               <ul>
                 <li>
-                  <a href="#">Facebook</a>
+                  <a href="#">Terms &amp; Condition</a>
                 </li>
                 <li>
-                  <a href="#">Instagram</a>
+                  <a href="#">Privacy Policy</a>
                 </li>
                 <li>
-                  <a href="#">Youtube</a>
+                  <a href="#">Legal</a>
                 </li>
               </ul>
             </div>
