--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
               <div class="footer-bottom-wrapper">
                 <div class="footer-bottom-menu-wrapper">
                   <div class="copyright-text">
-                    <p>© Copyright 2024 by kodesolution.com</p>
+                    <p>© Copyright 2024 by hotex.com</p>
                   </div>
                 </div>
               </div>
