--- a/index-2.html
+++ b/index-2.html
@@ -278,7 +278,7 @@
           <!-- single slider start -->
           <div class="single-slider-wrapper">
             <div class="single-slider">
-              <div class="container">
+              <div class="custom-container">
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
@@ -299,7 +299,7 @@
           <!-- single slider start -->
           <div class="single-slider-wrapper">
             <div class="single-slider">
-              <div class="container">
+              <div class="custom-container">
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
@@ -320,7 +320,7 @@
           <!-- single slider start -->
           <div class="single-slider-wrapper">
             <div class="single-slider">
-              <div class="container">
+              <div class="custom-container">
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
@@ -365,7 +365,7 @@
             </div>
           </div>
           <div class="col-lg-5">
-            <div class="section-title mb-0">
+            <div class="section-title mb-20">
               <div class="sec-content">
                 <h5 class="short-title">The Cappa Luxury Hotel</h5>
                 <h2 class="title">Enjoy a Luxury Experience</h2>
