add: breadcrumb responsive

--- a/about-2.html
+++ b/about-2.html
@@ -274,19 +274,23 @@
         <img src="images/shape/slider-2.1.png" alt="breadcrumb-shape" />
       </div>
       <div class="shape"></div>
-      <div class="row">
-        <div class="col-md-12">
-          <div
-            class="breadcrumb-wrapper py-215 my-90 mx-90"
-            style="background-image: url(images/hero-section/v-2/image-1.jpg)">
-            <div class="breadcrumb-list">
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="#">About</a></li>
-              </ul>
-            </div>
-            <div class="page-heading">
-              <h3 class="page-title">About</h3>
+      <div class="custom-container">
+        <div class="row">
+          <div class="col-md-12">
+            <div
+              class="breadcrumb-wrapper py-215 my-90 mx-90"
+              style="
+                background-image: url(images/hero-section/v-2/image-1.jpg);
+              ">
+              <div class="breadcrumb-list">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="#">About</a></li>
+                </ul>
+              </div>
+              <div class="page-heading">
+                <h3 class="page-title">About</h3>
+              </div>
             </div>
           </div>
         </div>
