--- a/service-2.html
+++ b/service-2.html
@@ -300,7 +300,7 @@
     <!-- List page wrapper Start -->
     <div class="list-page-wrapper py-80">
       <div class="container">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-7">
             <div class="btn-wrapper">
               <a href="#" class="list-btn">Default</a>
@@ -309,7 +309,7 @@
               <a href="#" class="list-btn">Date</a>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="row mt-60">
           <div class="col-lg-8">
             <div class="row">
